# arcane

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  _sidebar.md  architecture.md  configuration.md  index.html  installation.md  mcp-tools.md  quickstart.md
src/arcane/: __init__.py  cli.py
src/arcane/cli/: __init__.py  _utils.py  analyze.py  config.py  draft.py  ingest.py  journey.py  memory.py  migrate.py  relationship.py
src/arcane/domain/: enums.py  models.py
src/arcane/infra/: config.py  logging.py  markdown.py  redaction.py  search.py
src/arcane/infra/db/: artifact_repo.py  connection.py  insight_repo.py  journey_repo.py  memory_repo.py  relationship_repo.py  schema.py
src/arcane/infra/embeddings/: base.py  ollama.py  openai_embed.py
src/arcane/mcp_server/: prompts.py  resources.py  server.py
src/arcane/mcp_server/tools/: content_tools.py  ingestion_tools.py  intelligence_tools.py  journey_tools.py  memory_tools.py  relationship_tools.py
src/arcane/plugins/: protocols.py  registry.py
src/arcane/plugins/builtin/: adr_gen.py  blog_gen.py  ci_flakes.py  gha_ingest.py  git_ingest.py  linear_ingest.py  velocity.py
src/arcane/services/: container.py  ingestion.py  intelligence.py  journey.py  memory.py  migration.py
tests/: conftest.py
tests/cli/: test_cli.py  test_cli_help.py
tests/integration/: test_ingestion_service.py  test_intelligence_service.py  test_journey_repo.py  test_memory_repo.py  test_migration.py  test_relationship_repo.py  test_services.py
tests/mcp/: test_prompt_handlers.py  test_resource_handlers.py  test_tool_handlers.py
tests/plugins/: test_adr_gen.py  test_blog_gen.py  test_ci_flakes.py  test_gha_ingest.py  test_git_ingest.py  test_linear_ingest.py  test_registry.py  test_velocity.py
tests/unit/: test_models.py  test_redaction.py  test_search.py
